outputs_20260410-021410-25c684fa/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_47kvd49e\src\gtm_tom_3_phase_inverter_pwm.c:9:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_47kvd49e\include/IfxGtm_Pwm.h:27:16: error: conflicting types for 'IfxGtm_Pwm_callBack'; have 'void (*)(void *)'
   27 | typedef void (*IfxGtm_Pwm_callBack)(void *);
      |                ^~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_47kvd49e\include/IfxGtm_Pwm.h:9:38: note: previous declaration of 'IfxGtm_Pwm_callBack' with type 'IfxGtm_Pwm_callBack'
    9 | typedef struct { uint32 _reserved; } IfxGtm_Pwm_callBack; /* auto-stub: type not in mock include chain */
      |                                      ^~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_47kvd49e\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_47kvd49e\src\gtm_tom_3_phase_inverter_pwm.c:120:33: error: assignment to 'int' from 'void (*)(void *)' makes integer from pointer without a cast [-Wint-conversion]
  120 |     interruptConfig.periodEvent = IfxGtm_periodEventFunction;
      |                                 ^

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_47kvd49e\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_47kvd49e\include/IfxGtm_Pwm.h:27:16: error: conflicting types for 'IfxGtm_Pwm_callBack'; have 'void (*)(void *)'
   27 | typedef void (*IfxGtm_Pwm_callBack)(void *);
      |                ^~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_47kvd49e\include/IfxGtm_Pwm.h:9:38: note: previous declaration of 'IfxGtm_Pwm_callBack' with type 'IfxGtm_Pwm_callBack'
    9 | typedef struct { uint32 _reserved; } IfxGtm_Pwm_callBack; /* auto-stub: type not in mock include chain */
      |                                      ^~~~~~~~~~~~~~~~~~~
